fixed overflow for mobile landscape

--- a/index.css
+++ b/index.css
@@ -43,7 +43,6 @@ body {
     background-repeat: no-repeat;
     display: grid;
     place-items: center;
-    overflow: hidden;
 }
 
 /* ---------- TYPOGRAPHY & LAYOUT ---------- */
